--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Nunito&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0px;
+}
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+nav {
+  position: absolute;
+  top: 50px;
 }
 
 .App-logo {
